# my-axum-template

./: Cargo.toml  README.md  env.example  rewrite.sh  scripts.sh
src/: auth.rs  lib.rs  main.rs  router.rs
src/config/: init.rs  mod.rs
src/dto/: auth.rs  common.rs  company.rs  event.rs  location.rs  mod.rs  region.rs
src/handlers/: mod.rs
src/repository/: mod.rs  models.rs
src/repository/implementations/postgr/: mod.rs  pool.rs
src/system_models/: mod.rs  response.rs
tests/: workflow.rs
